--- a/whitelist.html
+++ b/whitelist.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="bloc">
                         <a class="bacra bacra1" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdF4vCFEdrXbIyD6LU7-CIiWaPQG4xtjXo2wPX8KQkniu9NkQ/viewform?usp=dialog">
-                            <div class="textCent"><span class="text text1">Java edition</span>
+                            <div class="textCent"><span class="text text1">Java Edition</span>
                                 <img class="img1" src="./img/Minecraft_Golden_Apple.png" alt="Golden_Apple">
                             </div>
                         </a>
