--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div><a href="https://atmocraftmap.dynmap.me/#world:-1:0:0:1500:0:0:0:0:perspective" target="_blank"><img src="./img/Map Marker.png" alt="Map" class="map1"></a></div>
                 </div>
             </div>
-            <video src="./img/givHome.mp4" type="video/mp4" autoplay muted loop></video>
+            <video class="video1" src="./img/givHome.mp4" type="video/mp4" autoplay muted loop></video>
         </nav>
     </header>
     <main>
@@ -61,7 +61,7 @@
     </main>
     <footer>
         <div class="hre">                
-            <img class="back" src="./img/Cnopca_serva_v_uglu.png" alt="Mine">
+            <img class="back" src="./img/Cnopca_serva_v_uglu1.png" alt="Mine">
             <a href="https://discord.gg/pC43MXWaYH" target="_blank"><img src="./img/dc.png" alt="dc"></a>
             <a href="https://t.me/AtmoMine/1" target="_blank"><img src="./img/tg.png" alt="tg"></a>
             <p class="textF">2024 The site is the property of MineClub. All rights reserved.</p>
