--- a/rules.html
+++ b/rules.html
@@ -143,14 +143,18 @@
 
     </main>
     <footer>
-        <div class="hre">                
+        <div class="hre">         
+            <hr class="foot_line">       
             <img class="back" src="./img/Cnopca_serva_v_uglu1.png" alt="Mine">
-            <a href="https://discord.gg/pC43MXWaYH" target="_blank"><img src="./img/dc.png" alt="dc"></a>
+            <a href="https://discord.gg/pC43MXWaYH" target="_blank" class="foot_marg"><img src="./img/dc.png" alt="dc"></a>
             <a href="https://t.me/AtmoMine/1" target="_blank"><img src="./img/tg.png" alt="tg"></a>
-            <p class="textF">2024 The site is the property of MineClub. All rights reserved.</p>
-            <p class="textF">Not an official Minecraft product. We are in no way affiliated with or endorsed by Mojang Synergies AB, Microsoft Corporation or other rightsholders.</p>
+            <div class="foot_flex">
+                <p class="textF svop1 textW">2024 The site is the property of MineClub. All rights reserved.</p>
+                <p class="textF svop2">Not an official Minecraft product. We are in no way affiliated with or endorsed by Mojang Synergies AB, Microsoft Corporation or other rightsholders.</p>
+            </div>
         </div>
     </footer>
+    <script src="animation.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
