--- a/information.html
+++ b/information.html
@@ -27,7 +27,7 @@
                     </div>        
                 </div>
 
-                <div class="logo"><img src="./img/Cnopca_serva_v_uglu.png" alt="Mine"></div>
+                <div class="logo"><a href="index.html"><img src="./img/Cnopca_serva_v_uglu.png" alt="Mine"></a></div>
                 <div></div>
                 <div id="display">
                     <div><a href="index.html" class="retreat plus1 plus">Home</a></div>
