--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p class="text2">Все це і не тільки чекає на тебе на нашому атмосферному сервері ;)</p>
         </div>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="hre">         
             <hr class="foot_line">       
             <img class="back" src="./img/Cnopca_serva_v_uglu1.png" alt="Mine">
@@ -78,7 +78,7 @@
         let video = document.querySelector('video');
         
         // Set the default playing speed
-        video.defaultPlaybackRate = 0.8
+        video.defaultPlaybackRate = 0.85
         
         // Loading the video after setting 
         video.load();
