--- a/information.html
+++ b/information.html
@@ -62,8 +62,8 @@
                     <div class="text text1">Bedrock</div>
                     <hr class="line">
                     <div class="text text2">Назва: MineClub</div>
-                    <div class="text text2">IP: 51.75.33.145</div>
-                    <div class="text text2">Порт: 19139</div>
+                    <div class="text text2">IP: atmo.mineclub.com.ua</div>
+                    <div class="text text2">Порт: 19143</div>
                 </div>
                 <img class="img2" src="./img/maintenance 1.png" alt="maintenance">
             </div>
