--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1">
     <link rel="stylesheet" href="normal.css">
     <link rel="icon" href="./img/favicon.png" type="image/png">
     <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
@@ -42,7 +42,7 @@
                     <div><a href="https://atmocraftmap.dynmap.me/#world:-1:0:0:1500:0:0:0:0:perspective" target="_blank"><img src="./img/Map Marker.png" alt="Map" class="map1"></a></div>
                 </div>
             </div>
-            <video class="video1" src="./img/givHome.mp4" type="video/mp4" autoplay muted loop></video>
+            <video class="video1" src="./img/givHome.mp4?v=1" type="video/mp4" autoplay muted loop></video>
         </nav>
     </header>
     <main>
